# random_work

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  example.env  package-lock.json  pyproject.toml  requirements.in  requirements.txt
pets/: README.md
src/: __init__.py
src/ahk_scripts/: releasing.ahk
src/ahk_scripts_local/: __init__.py  balders_game.ahk  balders_game_source.ahk  chained_echoes.ahk  diablo_2.ahk  factorio.ahk  fill_balders_game_hotkeys.py  global.ahk  grim_dawn.ahk  last_epoch.ahk  leaf_blower.ahk  on_top.ahk  path_of_exile.ahk  path_of_exile_utils.ahk  rider.ahk  sketchup.ahk  starcraft.ahk  terrorhedron.ahk  test.ahk  unity.ahk  utils.ahk  vampire_survivors.ahk
src/bg3_linux_mod_manager/: constants.py  mod_dependencies.json  mod_manager.py  public_mod_settings.xml  public_mod_settings_2.xml  steam_mod_settings.xml
src/chrome_font_extension/: airflow.css  airflow.js  airflow_custom_font.css  custom_font.css  github.css  github.js  github_custom_font.css  manifest.json
src/class_hierarchy/: classes.py  print_func.py
src/databricks_query_spammer/: Dockerfile  pyproject.toml  query_spammer.py
src/display_clock/: application.py
src/download_wikitables/: download.py  wikitable.py
src/flipper/: 1_off_bedroom_lights.sub  1_on_bedroom_lights.sub  2_off_tv_and_xbox.sub  2_on_tv_and_xbox.sub  3_off_bedroom_speakers.sub  3_on_bedroom_speakers.sub  4_off.sub  4_on.sub  5_off.sub  5_on.sub
src/general_utils/: ScriptableDataClass.py  file_utils.py  log_utils.py  prefect_utils.py  request_manager.py  threading.py
src/get_sql_lineage/: get_lineage.py  lineage.json
src/git_utils/: black_me.py  git.config  git.ignore
src/github_get_repo_contents/: main.py
src/grim_tools_font_resizer/: content.js  manifest.json  popup.html  popup.js
src/hotkey_mapping/: __init__.py  classes.py  env_utils.py  event_listener.py  event_writer.py  event_writer.sh  globals.py  helper.py  helper.sh  keyboard_listener.py  mouse.py  path_of_exile.py  scratch_1.py  settings.py  utils.py  xdotool_wrapper.py
src/jetbrains_helpers/: dict-Groovy.py.groovy  single-quoted-comma-suffix.csv.groovy
src/linux_hotkey/: README.md  _example.py  classes.py  env_utils.py  input_device_utils.py  main.py  modifier_utils.py  service.py  settings.py  shortcuts.py  xdotool_wrapper.py
src/linux_utils/: .bash_aliases  README.md  add_poe_path_split_tunnel_mullvad.sh  cachyos_setup.md  flameshot_guid.sh  install_into_bashrc.sh  open_gd_stash.sh  open_jetbrains.sh  update_programs.py  update_programs.sh
src/looker_api/: main.py
src/macbook_utils/: .zshenv  aliases.txt  black_me.py  black_me.sh  fluffer.sh  gitacp.sh  gitbranch.sh  gitcommit.sh  gitdev.sh  gitsync.py  gitsync.sh  json_format.py  json_format.sh  keep_move_notifications_alive.py  keep_move_notifications_alive.sh  move_notifications.scpt  redshift-pause.sh  redshift-resume.sh  redshift-watch.sh  run_local.sh  shortcut_map.py  sql_me.py  sql_me.sh
src/medly_example/: full_refresh.py
src/move_files/: move_files.py
src/music/: download_youtube.py
src/my_llm/: training.py
src/pd2_runewords/: parse_runewords.py  runes.ods  rw_chests.html  rw_helms.html  rw_shields.html  rw_weapons.html
src/poe2_scripts/: NeverSinks Litefilter.filter  filter.filter
src/poe_builds/: All Jewel Slots.xml  Molten Strike Poison PathfinderPoison Pathfinder2.xml
src/poe_scripts/: Penance_Brand_of_Dissipation.ods  blight_calc.py  embrace_maddress.py  get_coffin_table.py  rage_calc.py
src/prefect_example/: full_refresh.py  prefect_boiler.py
src/price_sharing_calculator/: main.py
src/process_mount_sinai_prices/: process.py
src/productivity_tracker/: app.py  productivity.db  (+1 more)
tests/: run_tests.sh
(+1515 files in other folders)
