[project]
name = "random-work"
version = "0.1.0"
description = "This is a place where I dump a bunch of random projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "bs4>=0.0.2",
    "cookiecutter>=2.6.0",
    "cryptography>=39.0.1",
    "flask>=3.1.0",
    "future>=1.0.0",
    "inflection>=0.5.1",
    "keyboard>=0.13.5",
    "looker-sdk>=24.20.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "prefect>=3.1.6",
    "pycairo>=1.27.0",
    "pygithub>=2.5.0",
    "pygobject-stubs>=2.12.0",
    "pygobject>=3.50.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pytube3>=9.6.4",
    "sentencepiece>=0.1.98",
    "slack-sdk>=3.33.5",
    "sqlfluff>=3.3.0",
    "sqlparse>=0.4.4",
    "wikitables>=0.5.5",
]
