[project]
name = "random-work"
authors = [
  {name = "Will Burdett", email = "github@willsapps.com"},
]
version = "0.1.0"
description = "This is a place where I dump a bunch of random projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "bs4>=0.0.2",
    "cookiecutter>=2.6.0",
    "cryptography>=39.0.1",
    "flask>=3.1.0",
    "future>=1.0.0",
    "inflection>=0.5.1",
    "keyboard>=0.13.5",
    "looker-sdk>=24.20.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "prefect>=3.1.6",
    "pygithub>=2.5.0",
    "pygobject-stubs>=2.12.0",
    "pygobject>=3.50.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pytube3>=9.6.4",
    "slack-sdk>=3.33.5",
    "sqlfluff>=3.3.0",
    "sqlparse>=0.4.4",
    "wikitables>=0.5.5",
    "dataclasses-json>=0.6.7",
    "ruff>=0.8.4",
    "pre-commit>=4.0.1",
    "databricks-sql-connector>=3.7.2",
    "pynput>=1.8.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
